[project]
name = "pywallet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "bsddb3>=6.2.9",
    "ecdsa>=0.19.1",
    "infer-types>=1.0.0",
    "pycryptodome>=3.22.0",
    "pytype>=2024.10.11",
    "ruff>=0.11.2",
]
[tool.ruff]
# Enable pycodestyle, Pyflakes, and import sorting
# Line length to match black's default
line-length = 100
# Target Python version
target-version = "py312"
# Exclude files/directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]
# Allow minus-sign (U+2212), greek-small-letter-rho (U+03C1), and the asterisk-operator (U+2217),
# which could be confused for "-", "p", and "*", respectively.
allowed-confusables = ["−", "ρ", "∗"]

[tool.ruff.lint.isort]
known-first-party = ["pywallet"]
